# dual_arms_msgs

./: CMakeLists.txt  package.xml
msg/: Brick.msg  BrickArray.msg  GraspPoint.msg
srv/: DetectBricks.srv  ExecuteMTCHandover.srv  GetAssemblyPlan.srv  GetGrasp.srv  GetHandoverZone.srv  ResolveCollision.srv
